@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-20T16:24:30Z",
-  "count" : 63,
-  "count_minmax" : [ 61, 63 ],
-  "count_decinc" : [ -0, +63 ],
-  "uniques" : 2,
+  "timestamp" : "2022-07-04T01:44:46Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 63 ],
+  "count_decinc" : [ -61, +63 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
