@@ -1,16 +1,11 @@
 {
-  "count": 118,
+  "count": 54,
   "uniques": 7,
   "views": [
     {
-      "timestamp": "2022-06-19T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 63,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-24T00:00:00Z",
